Remove CRD and BuildKite

--- a/templates/rolebinding.yaml
+++ b/templates/rolebinding.yaml
@@ -9,7 +9,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: {{ include "kubernetes-chaos.name" . }}-chaos-user
 subjects:
 - kind: ServiceAccount
